# rules-rust-mdbook-external-sources

./: BUILD.bazel  MODULE.bazel  README.md  book.toml
content/: BUILD.bazel  MODULE.bazel  book.toml
content/src/: index.md
